# torus_trooper_rs

./: Cargo.toml
.cargo/: config
src/: main.rs
src/tt/: pad.rs  screen.rs
src/tt/actor/: bullet.rs
