[package]
edition = "2018"
name = "torus_trooper"
version = "0.1.0"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>"]

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
bulletml = "0.2"
derive-new = "0.6"
diff = { version = "0.1", optional = true }
glutin = { version = "0.31", optional = true }
image = "0.24"
lazy_static = "1.4"
piston = "0.55"
piston2d-opengl_graphics = "0.83"
pistoncore-glutin_window = { version = "0.72", optional = true }
pistoncore-sdl2_window = { version = "0.69", optional = true }
preferences = { git = "https://github.com/Eh2406/preferences-rs.git", branch = "patch-1", revision = "4f426cf52da97d3b8914e10d4492f953d4304238" }
rand = "0.8"
rand_core = "0.6"
rand_xorshift = "0.3"
rle_vec = { version = "0.4", features = ["serialize"] }
sdl2 = { version = "0.35.2", features = ["mixer"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }
structopt = "0.3"
thiserror = "1.0"

[build-dependencies]
gl_generator = "0.14"

[features]
default = ["glutin_backend"]
glutin_backend = ["glutin", "pistoncore-glutin_window"]
sdl_backend = ["pistoncore-sdl2_window"]
game_recorder = ["diff", "serde_json"]
